description, robots and keywords meta tags added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="icon" href="/icon.png"/>
+    <meta name="description"
+          content="Enable profile creation, deletion, and modification functionalities on a DualSense Edge controller without a PlayStation 5 console."/>
+    <meta name="keywords" content="dualsense, edge, configurator">
+    <meta name="robots" content="index,nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>DualSense Edge Profile Web Application</title>
     <style>
